base/eso/network_policy.yaml
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: external-secrets
  namespace: external-secrets
specs:
  - endpointSelector:
      matchLabels:
        app.kubernetes.io/name: external-secrets
        app.kubernetes.io/instance: external-secrets
        io.kubernetes.pod.namespace: external-secrets
    egress:
      - toEntities:
          - kube-apiserver
      - toServices:
          - k8sService:
              serviceName: kube-dns
              namespace: kube-system
        toPorts:
          - ports:
              - port: "53"
                protocol: UDP
              - port: "53"
                protocol: TCP
      - toServices:
          - k8sService:
              serviceName: bitwarden-sdk-server
              namespace: external-secrets
        toPorts:
          - ports:
              - port: "9998"
                protocol: TCP

  - endpointSelector:
      matchLabels:
        app.kubernetes.io/name: bitwarden-sdk-server
        io.kubernetes.pod.namespace: external-secrets
    ingress:
      - fromEntities:
          - host
        toPorts:
          - ports:
              - port: "9998"
                protocol: TCP
      - fromEndpoints:
          - matchLabels:
              app.kubernetes.io/name: external-secrets
              app.kubernetes.io/instance: external-secrets
              io.kubernetes.pod.namespace: external-secrets
        toPorts:
          - ports:
              - port: "9998"
                protocol: TCP
    egress:
      - toServices:
          - k8sService:
              serviceName: kube-dns
              namespace: kube-system
        toPorts:
          - ports:
              - port: "53"
                protocol: UDP
              - port: "53"
                protocol: TCP
      - toEntities:
          - world

  - endpointSelector:
      matchLabels:
        app.kubernetes.io/name: external-secrets-webhook
        io.kubernetes.pod.namespace: external-secrets
    ingress:
      - fromEntities:
          - kube-apiserver
        toPorts:
          - ports:
              - port: "10250"
                protocol: TCP
      - fromEntities:
          - host
        toPorts:
          - ports:
              - port: "8081"
                protocol: TCP
    egress:
      - toEntities:
          - kube-apiserver
      - toServices:
          - k8sService:
              serviceName: kube-dns
              namespace: kube-system
        toPorts:
          - ports:
              - port: "53"
                protocol: UDP
              - port: "53"
                protocol: TCP

  - endpointSelector:
      matchLabels:
        app.kubernetes.io/name: external-secrets-cert-controller
        io.kubernetes.pod.namespace: external-secrets
    ingress:
      - fromEntities:
          - host
        toPorts:
          - ports:
              - port: "8081"
                protocol: TCP
    egress:
      - toEntities:
          - kube-apiserver
      - toServices:
          - k8sService:
              serviceName: kube-dns
              namespace: kube-system
        toPorts:
          - ports:
              - port: "53"
                protocol: UDP
              - port: "53"
                protocol: TCP
